--- a/web.html
+++ b/web.html
@@ -8,7 +8,10 @@
             <h1>
                 sabias que brawl stars es uno de los juegos mas revolucionarios de la insdistria gaming movil?
             </h1>
-            te quiero, hermano
+            <h2>
+                el primo
+            </h2>
+           
         </div>
     </body>
 </html>
