--- a/web.html
+++ b/web.html
@@ -9,7 +9,7 @@
                 sabias que brawl stars es uno de los juegos mas revolucionarios de la insdistria gaming movil?
             </h1>
             <h2>
-                el primo
+                te quiero hermano :D
             </h2>
            
         </div>
